--- a/packages/menu/css/menu.css
+++ b/packages/menu/css/menu.css
@@ -19,7 +19,10 @@
 	display: block;
 	padding-left: 1px;
 	margin-left: -1px;
-	background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/sprites.png") 0 -104px no-repeat;
+    }
+    
+    #main_menu li.direct_child:first-child {
+	background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/menu_items_sprite.png") 0 -185px;
     }
   
 	#main_menu li.direct_child a.direct_child { 
@@ -28,7 +31,7 @@
 		padding: 9px 11px;
 		height: 12px;
 		color: #4d361b;
-		background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/menu_items_sprite.png") right -185px;
+		background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/sprites.png") right -104px no-repeat;
 		text-decoration: none;
 		line-height: 13px;
 	}
@@ -44,19 +47,14 @@
 		line-height: 13px;
 	}
 
-
 #main_menu li.active_menu:hover,
-#main_menu li.active_menu  {
-	background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/sprites.png") 0 -135px repeat-x;
+#main_menu li.active_menu {
+	background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/sprites.png") 0 -135px !important;
 	padding: 0 1px;
 	margin-right: -1px;
 	z-index: 2;
 }
- 
- 	#main_menu li.direct_child:hover {
-	    background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/sprites.png") 0 -166px repeat-x;
-	}
-	
+
 	#main_menu li.active_menu a.direct_child:hover,
 	#main_menu li.active_menu a.direct_child {
 		height: 18px;
@@ -64,11 +62,6 @@
 		color: #383838;
 		position: relative;
 		z-index: 5;
-	}
-	
-	#main_menu li a.direct_child:hover {
-		background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/menu_items_sprite.png") top right;
-		color: #383838;
 	}
 	
 	#main_menu .small.active_menu a.direct_child,
