--- a/packages/entertain/css/previews.css
+++ b/packages/entertain/css/previews.css
@@ -169,3 +169,23 @@
 	-moz-border-radius-topleft: 3px;
 	-webkit-border-top-left-radius: 3px;
 }
+
+.entertain_preview_list
+{
+	padding: 0px;
+	margin: 0;
+}
+
+.entertain_preview_list li
+{
+	border: 1px solid #373737;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	overflow: hidden;
+	margin: 5px;
+}
+
+.entertain_preview_list li img
+{
+	float: left;
+}
