Fixed so images in entertain isn't scaled up
Signed-off-by: Patrick Lef <lef@hamsterpaj.net>

--- a/packages/entertain/css/show_item.css
+++ b/packages/entertain/css/show_item.css
@@ -71,6 +71,13 @@
 	z-index: 100;
 }
 
+.entertain_div .content
+{
+	width: 638px;
+	text-align: center;
+	clear: both;
+}
+
 .entertain_div .info
 {
 	float: left;
