Vastly improved livesearch code. Added up/down navigation to search.
Signed-off-by: Erik Andersson <erik.rothoff@gmail.com>

--- a/packages/livesearch/css/livesearch.css
+++ b/packages/livesearch/css/livesearch.css
@@ -91,3 +91,9 @@
 #searchform .item {
 	padding: 3px;
 }
+
+
+    #side_module_search .suggestions .active div,
+    #searchform .suggestions .active div {
+	background: #c2d6ff;
+    }
