--- a/packages/base/css/general.css
+++ b/packages/base/css/general.css
@@ -523,6 +523,18 @@ dd
 	margin-top: -21px;
 }
 
+#hp #modules a.edit {
+	display: block;
+	width: 11px;
+	height: 10px;
+	outline: none;
+	background: url("http://static.hamsterpaj.net/images/packages/base/layouts/amanda/status_edit_icon.png") no-repeat;
+	float: right;
+	text-indent: -999px;
+	margin-top: -21px;
+	margin-right: 15px;
+}
+
 .textarea_full
 {
 	border: 1px solid #ababab;
